--- a/action.yml
+++ b/action.yml
@@ -103,40 +103,42 @@ runs:
             break
         }
         
-        echo "ignore-release=$ignoreRelease" >> $env:GITHUB_OUTPUT
+        Write-Host "skip=$ignoreRelease"
+        "skip=$ignoreRelease" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
 
     - name: Update PR title if release is skipped
-      if: steps.check-changes.outputs.ignore-release == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed'
+      if: steps.check-changes.outputs.skip == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed'
       shell: bash
       env:
         GH_TOKEN: ${{ inputs.github-token }}
         PR_NUMBER: ${{ github.event.number }}
         PR_TITLE: "${{ inputs.version }} (release skipped)"
       run: |
-        gh pr edit $PR_NUMBER --title "$PR_TITLE"
+        gh pr edit $PR_NUMBER --title "$PR_TITLE" --add-label "release-skipped" --remove-label "🚀 release"
     - name: Set env
-      if: steps.check-changes.outputs.ignore-release != 'true'
+      if: steps.check-changes.outputs.skip != 'true'
       id: set-env
       shell: bash
       run: |
+        exit 1
         echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
         echo "ARTIFACT_NAME=${{ inputs.artifact-name }}" >> $GITHUB_ENV
         echo "NUGET_API_KEY=${{ inputs.nuget-api-key }}" >> $GITHUB_ENV
         echo "ARTIFACT_PATH=./packages" >> $GITHUB_ENV
         echo "NUGET_SOURCE=${{ inputs.nuget-source }}" >> $GITHUB_ENV
     - name: Download package
-      if: steps.check-changes.outputs.ignore-release != 'true'
+      if: steps.check-changes.outputs.skip != 'true'
       uses: actions/download-artifact@v4
       with:
         name: ${{ env.ARTIFACT_NAME }}
         path: ${{ env.ARTIFACT_PATH }}
     - name: Push to NuGet
-      if: ${{ inputs.nuget-skip-push != 'true' }} && steps.check-changes.outputs.ignore-release != 'true'
+      if: ${{ inputs.nuget-skip-push != 'true' }} && steps.check-changes.outputs.skip != 'true'
       shell: bash
       run: |
         dotnet nuget push ${{ env.ARTIFACT_PATH }}/**/*.nupkg -k ${{ env.NUGET_API_KEY }} -s ${{ env.NUGET_SOURCE }} --skip-duplicate
     - name: 🚀 Create release
-      if: steps.check-changes.outputs.ignore-release != 'true'
+      if: steps.check-changes.outputs.skip != 'true'
       uses: jcdcdev/jcdcdev.GitHub.CreateRelease@main
       with:
         version: ${{ env.VERSION }}
