--- a/action.yml
+++ b/action.yml
@@ -116,29 +116,29 @@ runs:
       run: |
         gh pr edit $PR_NUMBER --title "$PR_TITLE" --remove-label "🚀 release"
     - name: Set env
-      if: steps.check-changes.outputs.skip != 'true'
+      if: steps.check-changes.outputs.skip == 'false'
       id: set-env
       shell: bash
       run: |
-        exit 1
         echo "VERSION=${{ inputs.version }}" >> $GITHUB_ENV
         echo "ARTIFACT_NAME=${{ inputs.artifact-name }}" >> $GITHUB_ENV
         echo "NUGET_API_KEY=${{ inputs.nuget-api-key }}" >> $GITHUB_ENV
         echo "ARTIFACT_PATH=./packages" >> $GITHUB_ENV
         echo "NUGET_SOURCE=${{ inputs.nuget-source }}" >> $GITHUB_ENV
+        exit 1
     - name: Download package
-      if: steps.check-changes.outputs.skip != 'true'
+      if: steps.check-changes.outputs.skip == 'false'
       uses: actions/download-artifact@v4
       with:
         name: ${{ env.ARTIFACT_NAME }}
         path: ${{ env.ARTIFACT_PATH }}
     - name: Push to NuGet
-      if: ${{ inputs.nuget-skip-push != 'true' }} && steps.check-changes.outputs.skip != 'true'
+      if: ${{ inputs.nuget-skip-push != 'true' }} && steps.check-changes.outputs.skip == 'false'
       shell: bash
       run: |
         dotnet nuget push ${{ env.ARTIFACT_PATH }}/**/*.nupkg -k ${{ env.NUGET_API_KEY }} -s ${{ env.NUGET_SOURCE }} --skip-duplicate
     - name: 🚀 Create release
-      if: steps.check-changes.outputs.skip != 'true'
+      if: steps.check-changes.outputs.skip == 'false'
       uses: jcdcdev/jcdcdev.GitHub.CreateRelease@main
       with:
         version: ${{ env.VERSION }}
