--- a/action.yml
+++ b/action.yml
@@ -112,6 +112,7 @@ runs:
       env:
         GH_TOKEN: ${{ inputs.github-token }}
         PR_NUMBER: ${{ github.event.number }}
+        PR_TITLE: "${{ inputs.version }}"
       run: |
         if [ -z "$PR_NUMBER" ]; then
           echo "No PR number found, skipping label removal."
